syntax = "proto3";

package pet;

option go_package="github.com/DOGTT/dm-api-server/api/base;api";

message PetInfo {
    uint64 id = 1;
    int32 status = 2;
    string name = 3;
    uint32 gender = 4; // 性别，使用 uint32 表示
    string avatar = 5;
    string specie = 6;
    string breed = 7;
    int32 weight = 8; // 使用 int32 表示重量
    string birth_date = 9;

    int64 created_at = 21;
    int64 updated_at = 22;
}