syntax = "proto3";

package user;

option go_package = "github.com/DOGTT/dm-api-server/api/base;api";

import "pet.proto";

message UserInfo {
  string id = 1;
  repeated UserPetInfo user_pets = 2;
  string name = 3;
  string avatar = 4;

  int64 created_at = 21;
  int64 updated_at = 22;
}

message UserPetInfo {
  pet.PetInfo pet = 1;
  string pet_title = 2;
  int32 pet_status = 3;
}

// 宠物快速注册信息
message UserFastRegisterData {
  // 名字
  string pet_name = 1;
  // 宠物头像 base64 data
  string pet_avatar_data = 2;
  // 宠物和人的关系
  string pet_title = 3;
}



// 用户状态互动状态
enum UserIxnState {
  USER_IXN_STATE_UNSPECIFIED = 0;
  // 点赞，觉得这个频道不错
  USER_IXN_STATE_LIKE = 1;
  // 收藏, 收藏后会接收这个频道的动态
  USER_IXN_STATE_STAR = 2;
}

// 用户状态互动事件
enum UserIxnEvent {
  USER_IXN_EVENT_UNSPECIFIED = 0;
  // 分享
  USER_IXN_EVENT_SHARE = 1;
}
